--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div style="float:right;position:absolute;right:30vw;">
+  <div style="float:right;position:absolute;right:30vw;margin-top:100px;">
     <img src="yessir.png" style="height:600px;position:absolute;">
   </div>
   <center>
