--- a/content/math-mas/index.html
+++ b/content/math-mas/index.html
@@ -39,3 +39,17 @@
 
 </body>
 </html>
+
+<style>
+  body {
+    font-family:"Lucida Console", Monaco, monospace;
+    margin-left:30px;
+    margin-top:20px;
+  }
+  ul {
+    font-size:13px;
+  }
+  p {
+    font-size:13px;
+  }
+</style>
