--- a/qc/qc_course.html
+++ b/qc/qc_course.html
@@ -49,3 +49,17 @@ The estimated time-frame for this course is 10 weeks, with a preliminary outline
 
 </body>
 </html>
+
+<style>
+  body {
+    font-family:"Lucida Console", Monaco, monospace;
+    margin-left:30px;
+    margin-top:20px;
+  }
+  ul {
+    font-size:13px;
+  }
+  p {
+    font-size:13px;
+  }
+</style>
