--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </ul>
 <p style="line-height:1.6">Other than doing the stuff on the above list, I have been <b>incredibly lucky</b> to have a lot of cool experiences that have allowed me to develop my knowledge further in the past few years!
 This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a co-contributor to a <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a> (it's actually not that impressive, there are a lot of co-authors :) ), being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
-and having the extremely aweosme opportunity to take part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
+and having the extremely awesome opportunity to take part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
 <p style="line-height:1.6">I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing!</p>
 </div>
     <h4 style="margin-top:40px;">I sometimes write stuff online!</h4>
