--- a/physics/index.html
+++ b/physics/index.html
@@ -17,9 +17,19 @@
     <p>. . . . . . . . . . . . . . . . . .</p>
     <div style="width:800px;">
     <h3>Quantum Mechanics</h3>
+    <ul>
+      <li>Griffiths Introduction to Quantum Mechanics Solution Manual &nbsp; <a href="https://lucaman99.github.io/qm/">[Website]</a></li>
+    </ul>
     <h3>Classical Mechanics</h3>
-    <h3>Computational Physics</h3>
+    <ul>
+    <li>Brilliant.org Profile (Solutions to contest-style classical mechanics problems) &nbsp; <a href="https://brilliant.org/profile/jack-tj20jb/solutions/">[Website]</a></li>
+  </ul>
     <h3>Upcoming Projects</h3>
+    <ul>
+      <li>Goldstein Classical Mechanics Online Solution Manual</li>
+      <br>
+      <li>Griffiths Electrodynamics Notes</li>
+    </ul>
     <br>
     </div>
     </div>
