--- a/qm/index.html
+++ b/qm/index.html
@@ -23,7 +23,7 @@
 <p>Chapter 4: <a href="https://lucaman99.github.io/qm/4/1.html">Problem 4.1</a>, <a href="https://lucaman99.github.io/qm/4/14.html">Problem 4.14</a>, <a href="https://lucaman99.github.io/qm/4/17.html">Problem 4.17</a>, <a href="https://lucaman99.github.io/qm/4/24.html">Problem 4.24</a>, <a href="https://lucaman99.github.io/qm/4/30.html">Problem 4.30</a>, <a href="https://lucaman99.github.io/qm/4/33.html">Problem 4.33</a>,  <a href="https://lucaman99.github.io/qm/4/50.html">Problem 4.50</a>,
 <a href="https://lucaman99.github.io/qm/4/57.html">Problem 4.57</a></p>
 <p>Chapter 5: <a href="https://lucaman99.github.io/qm/5/37.html">Problem 5.37</a></p>
-<p>Chapter 6: <a href="https://lucaman99.github.io/qm/6/5.html">Problem 6.5</a></p>
+<p>Chapter 6: <a href="https://lucaman99.github.io/qm/6/5.html">Problem 6.5</a>, <a href="https://lucaman99.github.io/qm/6/7.html">Problem 6.7</a></p>
 </div>
 </center>
 <img src="coherent.png" style="height:400px;width:400px;right:-1px;position:fixed;bottom:0px;">
