--- a/math/index.html
+++ b/math/index.html
@@ -30,6 +30,8 @@
         <li>Session #3 &nbsp; <a href="https://www.overleaf.com/read/skcvmvbfjrcv">[Document]</a></li>
       </ul>
         </li>
+        <br>
+        <li>Doughnuts and Coffee Mugs: A Gentle Introduction to General Topology for High School Students &nbsp; <a href="https://drive.google.com/file/d/1htLYgdYYKgwfSowMYA4rauP4pS6WzhIy/view?usp=sharing">[Document]</a></li>
     </ul>
     <h3>Recreational/Contest Math</h3>
     <ul>
