--- a/munkres/index.html
+++ b/munkres/index.html
@@ -22,7 +22,7 @@
     <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
     <p>Section 19: <a href="https://lucaman99.github.io/munkres/19/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/19/2.html">Problem 2</a></p>
     <p>Section 20: <a href="https://lucaman99.github.io/munkres/20/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/20/11.html">Problem 11</a></p>
-    <p>Section 21: <a href="https://lucaman99.github.io/munkres/21/6.html">Problem 6 (Incomplete)</a></p>
+    <p>Section 21: <a href="https://lucaman99.github.io/munkres/21/6.html">Problem 6 (Incomplete)</a>, <a href="https://lucaman99.github.io/munkres/21/8.html">Problem 8</a></p>
     <br><br><br>
     Motivation if topology has got you down: <a href="https://www.youtube.com/watch?v=skrdyoabmgA">We Shall Never Surrender!</a>
     <img src="cackle.png" style="width:400;height:300;position:absolute;left:0px;bottom:0px;"
