--- a/munkres/index.html
+++ b/munkres/index.html
@@ -16,7 +16,7 @@
     <br><br>
 <h2>Munkres Introduction to Topology: Solution Manual</h2>
 <h3>Solution Directory (Incomplete)</h3>
-<p>Assorted Proofs to Random Propositions in Munkres (Currently Empty): <a href="https://lucaman99.github.io/munkres/other_proofs.html">Here</a></p>
+<!-- <p>Assorted Proofs to Random Propositions in Munkres (Currently Empty): <a href="https://lucaman99.github.io/munkres/other_proofs.html">Here</a></p> -->
 <p>Section 16: <a href="https://lucaman99.github.io/munkres/16/9.html">Problem 9</a></p>
 <p>Section 17: <a href="https://lucaman99.github.io/munkres/17/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/17/2.html">Problem 2</a>, <a href="https://lucaman99.github.io/munkres/17/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/17/13.html">Problem 13</a>, <a href="https://lucaman99.github.io/munkres/17/19.html">Problem 19 (Incomplete)</a></p>
     <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
