--- a/munkres/21/11.html
+++ b/munkres/21/11.html
@@ -172,9 +172,9 @@ Notice that:
 <br>
 $$r_j \ = \ \displaystyle\sum_{i \ = \ j \ + \ 1}^{\infty} M_i \ = \ M \ - \ \displaystyle\sum_{i \ = \ 0}^{j} M_i$$
 <br>
-Since $\sum_{i \ = \ 0}^{j} M_i$ converges to $M$, we find that by Part B, $r_j \ \rightarrow \ r \ = \ 0$. This means that for some value of $\epsilon$, we are able to pick some value $r_j$ that is smaller, thus giving us:
+Since $\sum_{i \ = \ 0}^{j} M_i$ converges to $M$, we find that by Part B, $r_j \ \rightarrow \ r \ = \ 0$. This means that for some value of $\epsilon$, we are able to pick some value $|r_j|$ that is smaller (by the definition of convergence), thus giving us for some value $q$:
 <br>
-$$|s \ - \ s_j| \ \leq \ r_q \ < \ \epsilon \ \ \ \ \forall \epsilon \ > \ 0$$
+$$|s \ - \ s_q| \ \leq \ r_q \ \leq \ |r_q| \ < \ \epsilon \ \ \ \ \forall \epsilon \ > \ 0$$
 <br>
 This is the definition of uniform convergence, thus we conclude our proof. $\blacksquare$
 </p>
