--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -17,8 +17,9 @@
     <p>. . . . . . . . . . . . . . . . . .</p>
     <div style="width:800px;">
     <ul>
-      <li><a href="https://preview.mailerlite.com/y6l5q6">October 2019 Newsletter</a></li>
-      <br>
+        <li><a href="https://preview.mailerlite.com/y6l5q6">October 2019 Newsletter</a></li>
+        <li><a href="https://preview.mailerlite.com/d5f7p6">November 2019 Newsletter</a></li>
+            <br>
     </ul>
     </div>
     </div>
