--- a/munkres/index.html
+++ b/munkres/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>Morin Mechanics</title>
+<title>Munkres Topology</title>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
 </script>
@@ -14,9 +14,16 @@
   <center>
   <div style="margin-left:25vw;margin-right:25vw;text-align:left">
     <br><br>
-<h2>David Morin Classical Mechanics: Solution Manual</h2>
+<h2>Munkres Introduction to Topology: Solution Manual</h2>
 <h3>Solution Directory (Incomplete)</h3>
-<p>Chapter 2: <a href="https://lucaman99.github.io/morin/2/26.html">Problem 26</a></p>
+<!-- <p>Assorted Proofs to Random Propositions in Munkres (Currently Empty): <a href="https://lucaman99.github.io/munkres/other_proofs.html">Here</a></p> -->
+<p>Section 16: <a href="https://lucaman99.github.io/munkres/16/9.html">Problem 9</a></p>
+<p>Section 17: <a href="https://lucaman99.github.io/munkres/17/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/17/2.html">Problem 2</a>, <a href="https://lucaman99.github.io/munkres/17/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/17/13.html">Problem 13</a>, <a href="https://lucaman99.github.io/munkres/17/19.html">Problem 19 (Incomplete)</a></p>
+    <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
+    <p>Section 19: <a href="https://lucaman99.github.io/munkres/19/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/19/2.html">Problem 2</a></p>
+    <p>Section 20: <a href="https://lucaman99.github.io/munkres/20/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/20/11.html">Problem 11</a></p>
+    <p>Section 21: <a href="https://lucaman99.github.io/munkres/21/8.html">Problem 8</a>, <a href="https://lucaman99.github.io/munkres/21/11.html">Problem 11</a></p>
+    <p>Topological Groups: <a href="https://lucaman99.github.io/munkres/Top_Groups/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/Top_Groups/3.html">Problem 3</a>
     <br><br><br>
     </div>
 </center>
