--- a/physics/index.html
+++ b/physics/index.html
@@ -24,7 +24,9 @@
     </ul>
     <h3>Classical Mechanics</h3>
     <ul>
-    <li>Brilliant.org Profile (Solutions to contest-style classical mechanics problems) &nbsp; <a href="https://brilliant.org/profile/jack-tj20jb/solutions/">[Website]</a></li>
+        <li>Brilliant.org Profile (Solutions to contest-style classical mechanics problems) &nbsp; <a href="https://brilliant.org/profile/jack-tj20jb/solutions/">[Website]</a></li>
+        <br>
+        <li>Morin Introduction to Classical Mechanics Solution Manual &nbsp; <a href="https://lucaman99.github.io/morin/">[Website]</a></li>
   </ul>
     <h3>Upcoming Projects</h3>
     <ul>
