--- a/new_blog/index.html
+++ b/new_blog/index.html
@@ -5,30 +5,31 @@
         <script type="text/x-mathjax-config">
          MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
         </script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" id="">
+        </script>
     </head>
 
     <body style="padding-bottom:30px;">
-        <center>
-            <div style="margin-left:20vw;margin-right:20vw;text-align:left">
-                <br><br>
-                <h2>The Coherent State</h2>
-                <h5>A semi-coherent assortment of thoughts, ramblings and theorems</h5>
-                <p>. . . . . . . . . . . . . . . . . .</p>
-                <br>
-                <p>I've decided to revamp my personal blog, there will be content here soon!</p>
+        <div style="margin-left:29vw;margin-right:20vw;text-align:left">
+            <br><br>
+            <h2>The Coherent St$|\alpha\rangle$te</h2>
+                <! -- $|\alpha\rangle \ = \ e^{-\frac{|\alpha|^2}{2}} \ \displaystyle\sum_{n \ = \ 0}^{\infty} \ \frac{\alpha^n}{\sqrt{n!}} |n\rangle$ -->
+            <h5>A semi-coherent assortment of thoughts, ramblings and theorems</h5>
+            <hr class="line">
+                <h4 style="padding-top:15px;font-size:14px;"><b>2019</b></h4>
+                <ul>
+                    <li>Dec 28 2019 // <a href="lucaman99.github.io/new_blog/19/dec28_1.html">Density Matrices (Test Post)</a></li>
+                    <li style="padding-top:5px;">Dec 28 2019 // <a href="lucaman99.github.io/new_blog/19/dec28_2.html">A New Home for the Coherent State</a></li>
+                </ul>
                 <div style="width:800px;">
-                    <ul>
-                        <br>
-                    </ul>
                 </div>
-            </div>
+        </div>
     </body>
 </html>
 
 <style>
  body {
-     font-family:"Lucida Console", Monaco, monospace
+     font-family:"Lucida Console", Monaco, monospace;
  }
  ul {
      font-size:13px;
@@ -36,4 +37,14 @@
  p {
      font-size:13px;
  }
+
+ .line {
+     border:0;
+     height:1px;
+     background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+ }
+ a:hover{text-decoration:none;color:grey}a{color:#000}
 </style>
