--- a/new_blog/index.html
+++ b/new_blog/index.html
@@ -18,8 +18,8 @@
             <hr class="line">
                 <h4 style="padding-top:15px;font-size:14px;"><b>2019</b></h4>
                 <ul>
-                    <li>Dec 28 2019 // <a href="lucaman99.github.io/new_blog/2019/dec28_1.html">Density Matrices (Test Post)</a></li>
-                    <li style="padding-top:5px;">Dec 28 2019 // <a href="lucaman99.github.io/new_blog/2019/dec28_2.html">A New Home for the Coherent State</a></li>
+                    <li>Dec 28 2019 // <a href="https://lucaman99.github.io/new_blog/2019/dec28_1.html">Density Matrices (Test Post)</a></li>
+                    <li style="padding-top:5px;">Dec 28 2019 // <a href="https://lucaman99.github.io/new_blog/2019/dec28_2.html">A New Home for the Coherent State</a></li>
                 </ul>
                 <div style="width:800px;">
                 </div>
